# jsonnet-lang-for-gazelle

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
language/jsonnet/: BUILD.bazel
language/jsonnet/fileinfo/: BUILD.bazel
