load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "config_helper.go",
        "fileinfo.go",
        "fix.go",
        "generate.go",
        "importer.go",
        "kinds.go",
        "lang.go",
        "resolve.go",
    ],
    importpath = "github.com/vmware/jsonnet-lang-for-gazelle/language/jsonnet",
    visibility = ["//visibility:public"],
    deps = [
        "//language/jsonnet/fileinfo:go_default_library",
        "@gazelle//config:go_default_library",
        "@gazelle//label:go_default_library",
        "@gazelle//language:go_default_library",
        "@gazelle//repo:go_default_library",
        "@gazelle//resolve:go_default_library",
        "@gazelle//rule:go_default_library",
        "@google_jsonnet_go//:go_default_library",
        "@google_jsonnet_go//ast:go_default_library",
        "@google_jsonnet_go//toolutils:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "fileinfo_test.go",
        "importer_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//language/jsonnet/fileinfo:go_default_library",
        "@gazelle//config:go_default_library",
        "@google_jsonnet_go//:go_default_library",
    ],
)
